<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweets</string>
    <string name="compose_tweet_title">Compose Tweet</string>
    <string name="view_profile">View Profile</string>
    <string name="tweet_title_char_left">140</string>
    <string name="tweet_message_body_hint">What\'s happening?</string>
    <string name="new_tweet">New Tweet</string>
    <string name="tweet_discard_message">Are you sure you want discard this?</string>
    <string name="tweet_title">Tweet</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Twitter Timeline</string>
    <string name="network_error">Network error </string>
    <string name="btn_tweet_label">Tweet</string>
    <string name="btn_cancel_label">Cancel</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="tweet_detail_title">Activity detail</string>
    <string name="view_profile_activity_title">Profile</string>
    <string name="search_results_activity_title">Search</string>
    <string name="total_tweets">240\nTWEETS</string>
    <string name="total_following">270\nFOLLOWING</string>
    <string name="total_followers">400\nFOLLOWERS</string>
    <string name="retweet_title">Retweet</string>
    <string name="retweet_this_to_your_followers">Retweet this to your followers?</string>
    <string name="undo_this_tweet">Undo this tweet?</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="retweet">Retweet</string>
    <string name="search">Search</string>
    <string name="about_twitter">About Twitter</string>
    <string name="about_detail">Twitter helps you create and share ideas and information instantly, without barriers.</string>
    
    
</resources>