<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_search"
          android:orderInCategory="5"
          android:title="@string/search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
	<item
        android:id="@+id/compose_tweet"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/compose_tweet_action"
        android:title="@string/compose_tweet_title"/>
	
	<item
        android:id="@+id/view_profile"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_action_view_profile"
        android:title="@string/view_profile"/>

</menu>
