<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" 
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/ivCurrentUserProfileImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/bird_blue_48" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivCurrentUserProfileImage"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/ivCurrentUserProfileImage"
            android:text="TextView"
            android:textColor="#292f33"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCurrentUserScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvUsername"
            android:layout_below="@+id/tvUsername"
            android:text="TextView"
            android:textColor="#8899a6" />

        <EditText
            android:id="@+id/etTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ivCurrentUserProfileImage"
            android:layout_alignRight="@+id/btnTweet"
            android:layout_below="@+id/tvCurrentUserScreenName"
            android:layout_marginTop="19dp"
            android:background="#00000000"
            android:ems="10"
            android:hint="@string/tweet_message_body_hint"
            android:textColor="#66757f" 
            android:maxLines="9"/>

        <TextView
            android:id="@+id/tvCharLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvUsername"
            android:layout_alignBottom="@+id/tvUsername"
            android:layout_alignRight="@+id/etTweet"
            android:text="TextView" 
            android:textColor="#8899a6"/>

        <Button
            android:id="@+id/btnTweet"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_shape"
            android:text="@string/btn_tweet_label"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btnTweet"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/btn_cancel_label"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

    </RelativeLayout>

</RelativeLayout>
